update with some changes

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud-Based Murrel Gene Annotation Hub</title>
+    <title>CABPCIFASM db - Cabin Project CIFA Channa striata Omics database</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
+        <img src="CIFA Logo.png" alt="CIFA Logo" class="cifa-logo">
         <div class="logo">
-            <h1>CMGAH<sup>db</sup></h1>
+            <h1>CABPCIFASM<sup>db</sup></h1>
         </div>
         <nav>
             <ul>
@@ -30,7 +31,7 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-                <h1>Cloud-Based Murrel Gene Annotation Hub</h1>
+                <h1>Cabin Project CIFA Channa striata Omics database</h1>
                 <p>A Web interface for all that murrel express</p>
             </div>
             <div class="hero-image">
@@ -62,29 +63,35 @@
             </div>
         </section>
 
-        <section id="features">
-            <h2>FEATURES</h2>
-            <h3>Major components of CMGAH</h3>
+        <section id="features" class="features-section">
+            <div class="section-header">
+                <h2>Features</h2>
+                <p>Major components of CMGAH</p>
+            </div>
             <div class="features-grid">
                 <div class="feature-card">
-                    <img src="ssr-icon.png" alt="SSR">
-                    <h4>SSRs</h4>
-                    <p>A collection of Simple Sequence Repeat (SSR) markers identified across the murrel transcriptome, along with their forward and reverse primer sequences.</p>
+                    <div class="feature-content">
+                        <h3>Productive</h3>
+                        <p>Comprehensive data on growth-related genes, metabolic pathways, and factors influencing murrel fish productivity and development.</p>
+                    </div>
                 </div>
                 <div class="feature-card">
-                    <img src="deg-icon.png" alt="DEG">
-                    <h4>DEG</h4>
-                    <p>A collection of Differentially Expressed Genes (DEGs) identified from tissues including secondary leaf, flag leaf and panicle under control and drought stress conditions.</p>
+                    <div class="feature-content">
+                        <h3>Reproductive</h3>
+                        <p>Detailed information about genes and pathways involved in reproduction, breeding cycles, and reproductive development of murrel fish.</p>
+                    </div>
                 </div>
                 <div class="feature-card">
-                    <img src="functional-icon.png" alt="Functional">
-                    <h4>Functional</h4>
-                    <p>A collection of all the transcripts of murrel from tissues, including secondary leaf, flag leaf and panicle under control and drought stress conditions obtained via RNA-Seq and assembly along with their functional annotations.</p>
+                    <div class="feature-content">
+                        <h3>Disease Associated Genes</h3>
+                        <p>Database of genes linked to various diseases and immune responses in murrel fish, supporting research in disease resistance and health management.</p>
+                    </div>
                 </div>
                 <div class="feature-card">
-                    <img src="pathway-icon.png" alt="Pathway">
-                    <h4>Pathway</h4>
-                    <p>A collection of biological pathways associated with murrel transcripts, providing insights into metabolic and regulatory networks.</p>
+                    <div class="feature-content">
+                        <h3>Omics Datasets of Murrel</h3>
+                        <p>Integrated multi-omics data including genomics, transcriptomics, proteomics, and metabolomics information for comprehensive murrel research.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -135,8 +142,8 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>Little Millet Transcriptome Database</h3>
-                <p>A comprehensive database for transcriptome analysis and gene expression studies.</p>
+                <h3>CABPCIFASM db</h3>
+                <p>A comprehensive database for transcriptome analysis and gene expression studies in murrel fish species.</p>
             </div>
             <div class="footer-section">
                 <h3>Useful Links</h3>
@@ -170,7 +177,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>Copyright © 2025. Little Millet Transcriptome Database</p>
+            <p>Copyright © 2025. CABPCIFASM db</p>
             <p>Designed & Created by <a href="#">National Informatics Centre</a> | <img src="nic-logo.png" alt="NIC Logo" height="15"></p>
         </div>
     </footer>
