--- a/index.html
+++ b/index.html
@@ -69,24 +69,20 @@
             <h3>Major components of CMGAH</h3>
             <div class="features-grid">
                 <div class="feature-card">
-                    <img src="ssr-icon.png" alt="SSR">
-                    <h4>SSRs</h4>
-                    <p>A collection of Simple Sequence Repeat (SSR) markers identified across the murrel transcriptome, along with their forward and reverse primer sequences.</p>
+                    <h4>Productive</h4>
+                    <p>Comprehensive analysis of genes associated with growth, metabolism, and production-related traits in Channa striata, providing valuable insights for aquaculture enhancement.</p>
                 </div>
                 <div class="feature-card">
-                    <img src="deg-icon.png" alt="DEG">
-                    <h4>DEG</h4>
-                    <p>A collection of Differentially Expressed Genes (DEGs) identified from tissues including secondary leaf, flag leaf and panicle under control and drought stress conditions.</p>
+                    <h4>Reproductive</h4>
+                    <p>Detailed information about genes involved in reproductive processes, gonadal development, and breeding-related characteristics of murrel species.</p>
                 </div>
                 <div class="feature-card">
-                    <img src="functional-icon.png" alt="Functional">
-                    <h4>Functional</h4>
-                    <p>A collection of all the transcripts of murrel from tissues, including secondary leaf, flag leaf and panicle under control and drought stress conditions obtained via RNA-Seq and assembly along with their functional annotations.</p>
+                    <h4>Disease associated genes</h4>
+                    <p>Collection of genes related to immune response, disease resistance, and pathogen interactions, supporting health management in murrel aquaculture.</p>
                 </div>
                 <div class="feature-card">
-                    <img src="pathway-icon.png" alt="Pathway">
-                    <h4>Pathway</h4>
-                    <p>A collection of biological pathways associated with murrel transcripts, providing insights into metabolic and regulatory networks.</p>
+                    <h4>Omics datasets of Murrel</h4>
+                    <p>Integrated multi-omics data including transcriptomics, metabolomics, and metagenomics information, providing a holistic view of murrel biology.</p>
                 </div>
             </div>
         </section>
@@ -95,7 +91,7 @@
             <div class="content-wrapper">
                 <h2>Message of Principal Investigator</h2>
                 <div class="message-content">
-                    <p>The Cloud-Based Murrel Gene Annotation Hub (CMGAH) was conceptualized upon completion of the transcriptome sequencing in 2023 with the aim of developing the resource database of cloud-based architecture. The database provides accurate and integrated gene related information. The database was developed with the view to provide information about most comprehensive part of the genome. The database contains various information for transcriptome sequence, functional annotation, microsatellite markers, DEGs and pathway information. The database is freely available resource provides researchers/scientists a portal to search, browse and query data to facilitate functional and applied OMICS studies in Murrel species.</p>
+                    <p>The Cloud-Based Murrel Gene Annotation Hub (CMGAH) was conceptualized upon completion of the transcriptome sequencing with the aim of developing the resource database of cloud-based architecture. The database provides accurate and integrated gene related information. The database was developed with the view to provide information about most comprehensive part of the genome. The database contains various information for transcriptome sequence, functional annotation, microsatellite markers, DEGs and pathway information. The database is freely available resource provides researchers/scientists a portal to search, browse and query data to facilitate functional and applied OMICS studies in Murrel species.</p>
                     <div class="signature">
                         <img src="signature.png" alt="Signature">
                         <p>- Dr. Principal Investigator</p>
